0.84.03
=======

- print() table format: a row that is a string instead of a tuple/list will
  fill the entire row without column breaks


0.84.02
=======

- OrmFile: allow comment to be specified when creating OrmSection
- OrmFile: maintain insertion order
- do not show _commands to user (use an @Alias to expose command
  with a different name)
- expand support for choices to MULTI and MULTIREQ
- Spec: choices can be a space-delimited string
- print: fix "table" border so multiple internal lines print correctly


0.84.01
=======

- add Exit.UserCancelled for <ctrl-c>
- Run() now exits with returnncode (used be Main() only)
- ensure stdout/stderr are not ASCII, and will not raise Unicode exceptions
  if not set for UTF-8
- deprecate ProgressView in favor of ViewProgress
  (check argument order when switching)
- add list, tuple, and dict support to OrmFile
- support saving OrmFile objects back to disk


0.84.00
=======

- fix `bool(Trivalent.unknown)` (Python 2.7 only)
- `Job`: wait for passwords to be written
- add Sentinal: generates unique objects with helpful __repr__s
- add Singleton: used to turn a class into a single instance of that class
- add Var: := for Python's less than 3.8

backwards-incompatible change:
- Job now raises TimeoutError instead of stuffing it into stderr


0.83.03
=======

internal improvements


0.83.02
=======

print(..., border='table') now supports int/long/datetime.*/bool and
aligns accordingly


0.83.01
=======

emit "--no-[flag]" instead of "--[flag]" when force_default is True
use .wait() for sub-process based Execute/Job to avoid zombie processes


0.83.00
=======

parameters:
- ignore equals while processing positional arguments

utilities:
- add table printing capability to print()
- check for active process before checking terminal status (Job)


0.82.0
======

support "-a=..."

add radio option to parameters: if specified, only one parameter from each
radio group may be used
